Fix z-index of the ajax flash notice

--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -204,4 +204,5 @@ label {
   top: 0;
   width: 100%;
   text-align: center;
+  z-index: $z-modal;
 }
